<resources>
    <string name="app_name">JibresApp</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from yout favourite restraount!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets for any transportation and travel the world</string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="lets">Lets start</string>
    <string name="english">English</string>
    <string name="persian">فارسی</string>
    <string name="internet">Network not available</string>
    <string name="net"> please check your connection...</string>
    <string name="jibres">Jibres</string>
    <string name="sale">Sell and enjoy</string>
    <string name="powered">Powered by Ermile</string>
    <string name="hi">Hi!</string>
    <string name="welcom">wellcom</string>
    <string name="choose">Choose your language:</string>
    <string name="hi_fa">سلام!</string>
    <string name="wellcom_fa">خوش آمدید</string>
    <string name="refresh">Refresh</string>
    <string-array name="slide_titles">
        <item>@string/slide_1_title</item>
        <item>@string/slide_2_title</item>
        <item>@string/slide_3_title</item>
        <item>@string/slide_4_title</item>
    </string-array>


    <string-array name="slide_descriptions">
        <item>@string/slide_1_desc</item>
        <item>@string/slide_2_desc</item>
        <item>@string/slide_3_desc</item>
        <item>@string/slide_4_desc</item>
    </string-array>
</resources>
